followed Check 1 and 2 feedback by COMM 261 student

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,5 +1,5 @@
 <div id="DPW_BG_index" class="DPW_BG">
-	<div id="DPW_main">
+	<div id="DPW_main" class="container">
 		<section>
 			<p>About Page</p>
 			<p>Later I will finish this page...</p>
