--- a/app/templates/archives/fav-vocaloid-songs.hbs
+++ b/app/templates/archives/fav-vocaloid-songs.hbs
@@ -1,5 +1,5 @@
 <div id="DAS_BG" class="DAS_BG">
-	<div id="DAS_main">
+	<div id="DAS_main" class="container">
 		<section>
 			<div id="archives_favVocaloidslogo">
 				<img height="300" alt="Miku cute photo" src="http://i.imgur.com/v2p2NDQ.jpg">
