--- a/app/templates/archives/index.hbs
+++ b/app/templates/archives/index.hbs
@@ -3,7 +3,7 @@
 		<h1>Deo's Archives</h1>
 		<h2>For the sake of keeping my own work history readily available!</h2>
 	</div>
-	<div id="DAS_main">
+	<div id="DAS_main" class="container">
 		<section>
 			<p>This archive will host a rather diverse collection of websites, so it will be divided in categories for easier searching. Happy stalking!</p>
 		</section>
