--- a/app/templates/deo-space-program/achievements.hbs
+++ b/app/templates/deo-space-program/achievements.hbs
@@ -15,7 +15,7 @@
 			</ul>
 		</nav>
 	</div>
-	<div id="DSP_main">
+	<div id="DSP_main" class="container">
 		<section>
 			<p>TODO</p>
 		</section>
