--- a/app/templates/deo-space-program/copyright.hbs
+++ b/app/templates/deo-space-program/copyright.hbs
@@ -15,7 +15,7 @@
 			</ul>
 		</nav>
 	</div>
-	<div id="DSP_main">
+	<div id="DSP_main" class="container">
 		<section>
 		<p>All info about copyright info will be add on the next iteration... If you are the owner of one of the Miku pictures that I made use of, please contact on FB or Twitter so that I can write down your contact. This website is non-commercial and non-profit!</p>
 		<table>
