--- a/app/templates/deo-space-program/index.hbs
+++ b/app/templates/deo-space-program/index.hbs
@@ -15,7 +15,7 @@
 			</ul>
 		</nav>
 	</div>
-	<div id="DSP_main">
+	<div id="DSP_main" class="container">
 		<section>
 			<article class="intro">
 			<p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behing it.
