--- a/app/templates/ember-tutorial/index.hbs
+++ b/app/templates/ember-tutorial/index.hbs
@@ -2,7 +2,7 @@
 	<div id="ECT_header">
 		<h1>The Short and Sweet Ember Cli Tutorial!</h1>
 	</div>
-	<div id="ECT_main">
+	<div id="ECT_main" class="container">
 		<section>
 			<article>
 				<p>Knowing web development is becoming almost a requirement at this point for several majors,
