--- a/app/templates/ember-tutorial/installation.hbs
+++ b/app/templates/ember-tutorial/installation.hbs
@@ -33,7 +33,7 @@
 		</nav>
 		</section>
 	</div>
-	<div id="ECT_main">
+	<div id="ECT_main" class="container">
 		<section>
 			{{outlet}}
 		</section>
