--- a/app/templates/ember-tutorial/more.hbs
+++ b/app/templates/ember-tutorial/more.hbs
@@ -2,7 +2,7 @@
 	<div id="ECT_header">
 		<h1>Want to know more about Ember CLI and Ember.js?</h1>
 	</div>
-	<div id="ECT_main">
+	<div id="ECT_main" class="container">
 		<section>
 			<p>TODO</p>
 		</section>
