--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <div id="DPW_BG_index" class="DPW_BG">
-	<div id="DPW_main">
+	<div id="DPW_main" class="container">
 		<section>
 			<h2>Welcome to my Personal Website!</h2>
 			<p>This website hosts several projects and an archive of my past work.</p>
