--- a/app/templates/sass-tutorial/imports-and-variables.hbs
+++ b/app/templates/sass-tutorial/imports-and-variables.hbs
@@ -2,7 +2,7 @@
 	<div id="STS_header">
 		<h1>SASS - Imports & Variables</h1>
 	</div>
-	<div id="STS_main">
+	<div id="STS_main" class="container">
 		<section>
 			<article>
 			<p>One of the best things offered by SASS is variables, and coupled with imports things get even better! Possibilities includes, but not limited to:</p>
