--- a/app/templates/sass-tutorial/inheritance.hbs
+++ b/app/templates/sass-tutorial/inheritance.hbs
@@ -2,7 +2,7 @@
 	<div id="STS_header">
 		<h1>SASS - Inheritance</h1>
 	</div>
-	<div id="STS_main">
+	<div id="STS_main" class="container">
 		<section>
 			<article>
 			<p>Another SCSS feature that is quite handy is inheritance as it allows code sharing in a parent to child direction that comes useful in several instances such as styling different <b>divs</b> elements that have an underlying similarity. If you are a visual learn, then the following image summarizes the Inheritance methodology:</p>
