--- a/app/templates/sass-tutorial/more.hbs
+++ b/app/templates/sass-tutorial/more.hbs
@@ -2,7 +2,7 @@
 	<div id="STS_header">
 		<h1>More SASS!</h1>
 	</div>
-	<div id="STS_main">
+	<div id="STS_main" class="container">
 		<section>
 			<article>
 			<p>Want to know more? Want to master SASS? Then feel free to check out the links below:</p>
