--- a/app/templates/sass-tutorial/nesting.hbs
+++ b/app/templates/sass-tutorial/nesting.hbs
@@ -2,7 +2,7 @@
 	<div id="STS_header">
 		<h1>SASS Nesting</h1>
 	</div>
-	<div id="STS_main">
+	<div id="STS_main" class="container">
 		<section>
 			<article>
 			<p>Since I started to deal with CSS, I always hated how it handles nesting since HTML does such an awesome job in dealing with it... Now SASS allows you to have this option so that you can have nested and non-nested attributes implemented in a straight forward manner like below:</p>
