--- a/app/templates/sass-tutorial/index.hbs
+++ b/app/templates/sass-tutorial/index.hbs
@@ -2,7 +2,7 @@
 	<div id="STS_header">
 		<h1>Welcome to the SASS World!</h1>
 	</div>
-	<div id="STS_main">
+	<div id="STS_main" class="container">
 		<section>
 			<div class="STS_logos">
 				<img id="imgCSSLeft" height="150" alt="CSS3 Logo" src="http://i.imgur.com/6HxhcT7.png">
