--- a/app/templates/ember-tutorial/installation/github.hbs
+++ b/app/templates/ember-tutorial/installation/github.hbs
@@ -1,25 +1,28 @@
 <h2>Git & Github Tutorial</h2>
-<h3>How to use Versioning{{input type="checkbox" checked=emberTutorial.checkValue_4}}</h3>
+<h3>How to use Versioning</h3>
 <section>
 {{#if emberTutorial.checkValue_4}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
+<div class="ul_li_colored_2 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_4}}</div>
 </section>
-<h3>Clone and setup Project {{input type="checkbox" checked=emberTutorial.checkValue_5}}</h3>
+<h3>Clone and setup Project</h3>
 <section>
 {{#if emberTutorial.checkValue_5}}
 <p></p>
 {{else}}
 <p>// TODO</p>
 {{/if}}
+<div class="ul_li_colored_2 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_5}}</div>
 </section>
-<h3>Create an account & install Git  {{input type="checkbox" checked=emberTutorial.checkValue_6}}</h3>
+<h3>Create an account & install Git</h3>
 <section>
 {{#if emberTutorial.checkValue_6}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
+<div class="ul_li_colored_2 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_6}}</div>
 </section>
