--- a/app/templates/ember-tutorial/installation/heroku.hbs
+++ b/app/templates/ember-tutorial/installation/heroku.hbs
@@ -1,25 +1,28 @@
 <h2>Heroku Tutorial</h2>
-<h3>Setup Account {{input type="checkbox" checked=emberTutorial.checkValue_10}}</h3>
+<h3>Setup Account</h3>
 <section>
 {{#if emberTutorial.checkValue_10}}
 <p></p>
 {{else}}
 <p>First things first then... Go to <a href="https://dashboard.heroku.com/" target="_blank">Heroku Dashboard</a>. //TODO</p>
 {{/if}}
+<div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_10}}</div>
 </section>
-<h3>Hook Github Project {{input type="checkbox" checked=emberTutorial.checkValue_11}}</h3>
+<h3>Hook Github Project</h3>
 <section>
 {{#if emberTutorial.checkValue_11}}
 <p></p>
 {{else}}
 <p>// TODO</p>
 {{/if}}
+<div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_11}}</div>
 </section>
-<h3>Live Website test {{input type="checkbox" checked=emberTutorial.checkValue_12}}</h3>
+<h3>Live Website test </h3>
 <section>
 {{#if emberTutorial.checkValue_12}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
+<div class="ul_li_colored_4 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_12}}</div>
 </section>
