--- a/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
+++ b/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
@@ -1,25 +1,28 @@
 <h2>Ubuntu Tutorial</h2>
-<h3>Virtual Box & Ubuntu 14.04 {{input type="checkbox" checked=emberTutorial.checkValue_1}}</h3>
+<h3>Virtual Box & Ubuntu 14.04</h3>
 <section>
 {{#if emberTutorial.checkValue_1}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
+<div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_1}}</div>
 </section>
-<h3>Overall Dependencies {{input type="checkbox" checked=emberTutorial.checkValue_2}}</h3>
+<h3>Overall Dependencies</h3>
 <section>
 {{#if emberTutorial.checkValue_2}}
 <p></p>
 {{else}}
 <p>// TODO</p>
 {{/if}}
+<div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_3}}</div>
 </section>
-<h3>Project Dependencies {{input type="checkbox" checked=emberTutorial.checkValue_3}}</h3>
+<h3>Project Dependencies</h3>
 <section>
 {{#if emberTutorial.checkValue_3}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
+<div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_2}}</div>
 </section>
