--- a/app/templates/ember-tutorial/installation/testing.hbs
+++ b/app/templates/ember-tutorial/installation/testing.hbs
@@ -1,25 +1,28 @@
 <h2>Testing Tutorial</h2>
-<h3>Project Tests {{input type="checkbox" checked=emberTutorial.checkValue_7}}</h3>
+<h3>Project Tests</h3>
 <section>
 {{#if emberTutorial.checkValue_7}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
+<div class="ul_li_colored_3 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_7}}</div>
 </section>
-<h3>TravisCI {{input type="checkbox" checked=emberTutorial.checkValue_8}}</h3>
+<h3>TravisCI</h3>
 <section>
 {{#if emberTutorial.checkValue_8}}
 <p></p>
 {{else}}
 <p>// TODO</p>
 {{/if}}
+<div class="ul_li_colored_3 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_8}}</div>
 </section>
-<h3>CodeClimate {{input type="checkbox" checked=emberTutorial.checkValue_9}}</h3>
+<h3>CodeClimate</h3>
 <section>
 {{#if emberTutorial.checkValue_9}}
 <p></p>
 {{else}}
 <p>//TODO</p>
 {{/if}}
+<div class="ul_li_colored_3 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_9}}</div>
 </section>
