1/4 of the Ember Cli tutorial is almost ready

--- a/app/templates/ember-tutorial/installation/github.hbs
+++ b/app/templates/ember-tutorial/installation/github.hbs
@@ -1,5 +1,5 @@
 <h2>Git & Github Tutorial</h2>
-<h3>How to use Versioning</h3>
+<h3>Create an account & install Git</h3>
 <section>
 {{#if emberTutorial.checkValue_4}}
 <p></p>
@@ -8,7 +8,7 @@
 {{/if}}
 <div class="ul_li_colored_2 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_4}}</div>
 </section>
-<h3>Clone and setup Project</h3>
+<h3>Setting up your project</h3>
 <section>
 {{#if emberTutorial.checkValue_5}}
 <p></p>
@@ -17,7 +17,7 @@
 {{/if}}
 <div class="ul_li_colored_2 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_5}}</div>
 </section>
-<h3>Create an account & install Git</h3>
+<h3>How to use Git & Github</h3>
 <section>
 {{#if emberTutorial.checkValue_6}}
 <p></p>
