--- a/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
+++ b/app/templates/ember-tutorial/installation/ubuntu-virtual-box.hbs
@@ -6,7 +6,7 @@
 {{else}}
 <p>Everything has a beginning, and for this tutorial is having Ubuntu ready to go. 
 Although you could do the same on OSX and Windows, the steps are simply too different
- for me to account for in this guide.</p>    <a href="" target="_blank"> </a>
+ for me to account for in this guide.</p>
 <p>If you are using Ubuntu 14.04 already, then awesome as you can mark the section as
  complete and head to the overall dependencies. If not, stick around to a quick how to: </p>
 <p>1. Get <a href="https://www.virtualbox.org/wiki/Downloads" target="_blank">VirtualBox</a> and install it on your operating system.
@@ -24,7 +24,7 @@ I recommend having it to be a fixed size due to performance, but it is your call
 option for a quick and painless install (which only handles the created virtual disk, so don't worry.)</p>
 <p>6. Upon login, Go to the VirtualBox menu and click Devices followed by "Insert Guest Additions CS image". Run the software, install it and then restart the virtual machine.</p>
 <p>7. Maximize the VirtualBox window, and check to see if the screen covers the entire window like below:</p>
-<p>INSERT IMAGE</p>
+<p><a href="http://imgur.com/NyqsCXa" target="_blank"><img height=300px src="http://i.imgur.com/NyqsCXa.png" title="source: imgur.com" /></a></p>
 <p>If not, search for possible troubleshoots on Google (or Bing if that's your thing because it is mine due to the reward points.)</p>
 {{/if}}
 <div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_1}}</div>
@@ -72,7 +72,9 @@ This will make the rest of the tutorial focused on actual content rather than ge
   <li><code>npm install</code></li>
   <li><code>bower install</code></li>
 </ol>
-<p>Now the best part! run <code>ember server</code>, open a browser and go to localhost:4200. If the Index of this website loads, then Hooray! You are ready to move to the next section...</p>
+<p>Now the best part! run <code>ember server</code>, open a browser and go to localhost:4200. Does the Index of this website and terminal looks like the screenshoot below?</p>
+<a target="_blank" href="http://imgur.com/gQOjAZm"><img height=300 src="http://i.imgur.com/gQOjAZm.png" title="source: imgur.com" /></a>
+<p>Does it? If so, then Hooray! You are ready to move to the next section... Otherwise, Google the problem you are having as this guide has been tested quite a few times in order to make sure that the commands work.</p>
 {{/if}}
 <div class="ul_li_colored_1 ember_confirmation">Section complete? {{input type="checkbox" checked=emberTutorial.checkValue_3}}</div>
 </section>
